# module-linenoise

./: .gitlab-ci.yml  CMakeLists.txt  qore-linenoise-module.spec
docs/: Doxyfile.in
examples/: linenoise-example
src/: linenoise.qpp
test/: linenoise.qtest  test.q
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
